[Misc] Fix various mechanical SonarCloud issues
* S1066: merge collapsible nested if statements (ExtensionJobEventConverter,
  LocalizedStringEntityReferenceSerializer, DocumentQueryFilter)
* S1128: remove unused imports (ModelFactory, DeprecatedMailStorageScriptService)
* S6204: replace Collectors.toList() with Stream.toList() where the result
  stays confined (SolrRatingsManager, and two REST tag-reader tests)
* S1612: replace lambda with method reference (the two REST tag-reader tests)

Co-Authored-By: Vincent Massol <vincent@massol.net>